--- a/Максим фронт/Форма подачи заявки.html
+++ b/Максим фронт/Форма подачи заявки.html
@@ -4,9 +4,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Подача заявки</title>
+    <style>
+        input[type=text] {
+           width: 200px;
+           padding: 12px 20px;
+           margin: 8px 0;
+           box-sizing: border-box;
+           border: 2px solid cornflowerblue;
+           border-radius: 25px;
+        }
+        input[type=tyme] {
+           width: 200px;
+           padding: 12px 20px;
+           margin: 8px 0;
+           box-sizing: border-box;
+           border: 2px solid cornflowerblue;
+           border-radius: 25px;
+        }
+        textarea {
+            width: 400px;
+           padding: 12px 20px;
+           margin: 8px 0;
+           box-sizing: border-box;
+           border: 2px solid cornflowerblue;
+           border-radius: 25px;
+        }
+        html, body {
+          margin: 0;
+          height: 100%;
+          font-family: Arial, Helvetica, sans-serif;
+          background-image: url("stroitelstvo-1024x683.jpg");
+          background-repeat: no-repeat;
+          background-attachment: fixed;  
+          background-size: cover;
+        }
+        .zav {
+          font-family: Arial, Helvetica, sans-serif;
+          color:beige;
+          margin-left: auto;
+          margin-right: 700px;
+          width: 20em;
+          font-size: 20px;
+        }
+        .div, a {
+        display: inline-flex;
+          color:cornflowerblue;
+          text-align: center;
+          padding: 14px 16px;
+          text-decoration: none;
+          font-size: 30px;
+          background-color: lavender;
+          border-radius: 25px;
+        }
+        
+    </style>
 </head>
 <body>
+    <div><a href="Главная страница.html">Главная страница</a></div>
+    <div class="zav">
+    <form>
+    <h1>Подача заявки</h1>
+  Имя 
+  <br>
+  <input type="text" name="login">
+  <br>
+  Описание проблемы
+  <br>
+  <textarea rows="10" cols="50">
     
+    </textarea>
+  <br>
+  Удобное время прихода мастера
+  <br>
+  <input type="time" name="tyme">
+  <br>
+  <br>
+  <input type="submit" value="Подать">
+</form>
+    </div>
 </body>
 </html>
