--- a/Максим фронт/Профиль.html
+++ b/Максим фронт/Профиль.html
@@ -81,6 +81,7 @@
     <h1><a href="Главная страница.html">Главная страница</a></h1>
     <h1><a href="Мои заявки.html">Мои заявки</a></h1>
     <h1><a href="Обращения от УК.html">Обращения от УК</a></h1>
+    <h1><a href="Форма подачи заявки.html">Подача заявки</a></h1>
     </div>
     <div class="span"><img src="avatardefault.jpg" align="left" width="40%" heigth="40%" alt="Фото"></div>
     <div class="parent">
